test/corpus/fail/empty-module.mo
=========
empty-module.mo
=========

module {}

---

(source_file
  (obj_dec
    (obj_sort)
    (obj_body)))
